--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
    port: 8081
+spring:
+  kafka:
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+       value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
